--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="download">Download</string>
     <string name="range_separator">-</string>
     <string name="parameters">Параметры</string>
+    <string name="gradient_caps">ГРАДИЕНТ</string>
 </resources>
